[package]
name = "rust_diesel"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Michael Heyman <michaelheyman@users.noreply.github.com>"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
diesel = { version = "1.4.0", features = ["chrono", "sqlite"] }
dotenv = "0.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48", features = ["preserve_order"] }
