[package]
name = "schedule"
version = "0.1.0"
authors = ["Michael Heyman <michaelheyman@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.26"
serde = { version = "1.0.104", features = ["derive"] }
yew = "0.12.0"